--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -8,12 +8,12 @@
 <body>
     <h3>Create a new List</h3>
     <form method = "POST" action="/listings">
-        <input type="text" name="title" placeholder="Enter title" ><br><br>
-        <textarea name="description" placeholder="Enter description" cols="30" rows="10"></textarea><br><br>
-        <input type="text" name="image" placeholder="Enter image url/link"><br><br>
-        <input type="number" name="price" placeholder="Enter price"><br><br>
-        <input type="text" name="country" placeholder="Enter country"><br><br>
-        <input type="text" name="location" placeholder="Enter location"><br><br>
+        <input type="text" name="listing[title]" placeholder="Enter title" ><br><br>
+        <textarea name="listing[description]" placeholder="Enter description" cols="30" rows="10"></textarea><br><br>
+        <input type="text" name="listing[image]"placeholder="Enter image url/link"><br><br>
+        <input type="number" name="listing[price]" placeholder="Enter price"><br><br>
+        <input type="text" name="listing[country]" placeholder="Enter country"><br><br>
+        <input type="text" name="listing[location]" placeholder="Enter location"><br><br>
         <button>Add</button>
     </form>
 </body>
