--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -14,6 +14,10 @@
         <li><%= listing.location %></li>
         <li><%= listing.country %></li>
     </ul><br>
-    <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
+    <button><a href="/listings/<%= listing._id %>/edit">Edit this Listing</a></button><br><br>
+    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+        <button>Delete this list</button>
+    </form>
+
 </body>
 </html>
