--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WanderLust</title>
-</head>
-<body>
-    <h3>Create a new List</h3>
-    <form method = "POST" action="/listings">
-        <input type="text" name="listing[title]" placeholder="Enter title" ><br><br>
-        <textarea name="listing[description]" placeholder="Enter description" cols="30" rows="10"></textarea><br><br>
-        <input type="text" name="listing[image]"placeholder="Enter image url/link"><br><br>
-        <input type="number" name="listing[price]" placeholder="Enter price"><br><br>
-        <input type="text" name="listing[country]" placeholder="Enter country"><br><br>
-        <input type="text" name="listing[location]" placeholder="Enter location"><br><br>
-        <button>Add</button>
+  </head>
+  <body>
+    <h3>Create a New Listing</h3>
+    <form method="POST" action="/listings">
+      <input name="listing[title]" placeholder="enter title" type="text" />
+      <br /><br />
+      <textarea
+        name="listing[description]"
+        placeholder="enter description"
+      ></textarea>
+      <br /><br />
+      <input
+        name="listing[image]"
+        placeholder="enter image URL/Link"
+        type="text"
+      />
+      <br /><br />
+      <input name="listing[price]" placeholder="enter price" type="number" />
+      <br /><br />
+      <input name="listing[country]" placeholder="enter country" type="text" />
+      <br /><br />
+      <input
+        name="listing[location]"
+        placeholder="enter location"
+        type="text"
+      />
+      <br /><br />
+      <button>Add</button>
     </form>
-</body>
+  </body>
 </html>
