--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,13 @@
  .body{
   font-family: "Plus Jakarta Sans", sans-serif !important;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
  
+.container{
+    flex :1;
+}
  /* Navbar */
  .navbar{
     height:5rem;
@@ -76,4 +82,10 @@
  .card-img-overlay:hover {
     opacity: 0.2;
     background-color: white;
+ }
+
+ .add-btn{
+    background-color:aquamarine !important ;
+    color:black !important;
+    border: none !important;
  }
