--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,37 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WanderLust</title>
-  </head>
+<% layout("/layouts/boilerplate")%> 
   <body>
+    <div class="row">
+      <div class="col-8 offset-2"><br>
     <h3>Create a New Listing</h3>
     <form method="POST" action="/listings">
-      <input name="listing[title]" placeholder="enter title" type="text" />
-      <br /><br />
-      <textarea
+      <div  class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input name="listing[title]" placeholder="Add a Cachy title" type="text" class="form-control" />
+      </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea
         name="listing[description]"
-        placeholder="enter description"
+        class="form-control"
       ></textarea>
-      <br /><br />
-      <input
+      </div>
+      
+      <div class="mb-3">
+        <label for="image" class="form-label">Image Link</label>
+        <input
         name="listing[image]"
-        placeholder="enter image URL/Link"
+        placeholder="Enter image URL/Link"
         type="text"
-      />
-      <br /><br />
-      <input name="listing[price]" placeholder="enter price" type="number" />
-      <br /><br />
-      <input name="listing[country]" placeholder="enter country" type="text" />
-      <br /><br />
-      <input
-        name="listing[location]"
-        placeholder="enter location"
-        type="text"
-      />
-      <br /><br />
-      <button>Add</button>
+        class="form-control"
+      /></div>
+      
+      <div class="row">
+          <div class="mb-3 col-md-4">
+            <label for="price" class="form-label">Price</label>
+            <input name="listing[price]" placeholder="1200" type="number"  class="form-control" />
+          </div>
+          
+          <div class="mb-3 col-md-8">
+            <label for="country" class="form-label">Country</label>
+            <input name="listing[country]" placeholder="India" type="text" class="form-control" />
+          </div>
+        
+        </div>
+        <div class="mb-3">
+          <label for="location" class="form-label">Location</label>
+          <input
+          name="listing[location]"
+          placeholder="Kisan Nagar,Thane,Maharashtra"
+          type="text"
+          class="form-control"
+        /></div>
+      
+      <br />
+      <button class="btn btn-dark add-btn">Add</button>
+      <br><br>
     </form>
+  </div>
+  </div>
   </body>
-</html>
