--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate")%> 
   <body>
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-8 offset-2"><br>
     <h3>Create a New Listing</h3>
     <form method="POST" action="/listings">
@@ -46,8 +46,7 @@
           class="form-control"
         /></div>
       
-      <br />
-      <button class="btn btn-dark add-btn">Add</button>
+      <button class="btn btn-dark add-btn mt-3">Add</button>
       <br><br>
     </form>
   </div>
