--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,18 +1,23 @@
 <% layout("/layouts/boilerplate")%> 
-
-  <body>
+<div class="row mt-3">
+  <div class="col-8 offset-4">
     <h3>Listing Details :</h3>
-    <ul>
-      <li><%= listing.title %></li>
-      <li><%= listing.description %></li>
-      <li>&#8377; <%= listing.price.toLocaleString("en-IN") %></li>
-      <li><%= listing.location %></li>
-      <li><%= listing.country %></li>
-    </ul>
-    <br />
-    <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
+    <div class="card col-7">
+      <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image67890">
+      <div class="card-body">
+        <p class="card-text">
+          <b><%= listing.title %></b><br>
+          <%= listing.description %> <br>
+          &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
+          <%= listing.location %> <br>
+          <%= listing.country %>
+        </p>
+      </div>
+    </div>
+    <a href="/listings/<%= listing._id %>/edit" class="btn edit-btn">Edit this Listing</a>
     <br /><br />
     <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
-      <button>Delete this listing</button>
+      <button class="btn btn-danger">Delete this listing</button> <br><br>
     </form>
-  </body>
+</div>
+</div>
