--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -3,16 +3,17 @@
     <div class="row mt-3">
       <div class="col-8 offset-2"><br>
     <h3>Create a New Listing</h3>
-    <form method="POST" action="/listings">
+    <form method="POST" action="/listings" novalidate class="needs-validation">
       <div  class="mb-3">
         <label for="title" class="form-label">Title</label>
-        <input name="listing[title]" placeholder="Add a Cachy title" type="text" class="form-control" />
+        <input name="listing[title]" placeholder="Add a Cachy title" type="text" class="form-control" required/>
       </div>
       <div class="mb-3">
         <label for="description" class="form-label">Description</label>
         <textarea
         name="listing[description]"
         class="form-control"
+        required
       ></textarea>
       </div>
       
@@ -27,13 +28,13 @@
       
       <div class="row">
           <div class="mb-3 col-md-4">
-            <label for="price" class="form-label">Price</label>
-            <input name="listing[price]" placeholder="1200" type="number"  class="form-control" />
+            <label for="price" class="form-label">Price</label> 
+            <input name="listing[price]" placeholder="1200" type="number"  class="form-control" required />
           </div>
           
           <div class="mb-3 col-md-8">
             <label for="country" class="form-label">Country</label>
-            <input name="listing[country]" placeholder="India" type="text" class="form-control" />
+            <input name="listing[country]" placeholder="India" type="text" class="form-control" required />
           </div>
         
         </div>
@@ -44,6 +45,7 @@
           placeholder="Kisan Nagar,Thane,Maharashtra"
           type="text"
           class="form-control"
+          required
         /></div>
       
       <button class="btn btn-dark add-btn mt-3">Add</button>
