--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -7,6 +7,8 @@
       <div  class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input name="listing[title]" placeholder="Add a Cachy title" type="text" class="form-control" required/>
+        <div class="valid-feedback">Title looks good</div>
+        <div class="invalid-feedback">Provide a suitable title</div>
       </div>
       <div class="mb-3">
         <label for="description" class="form-label">Description</label>
@@ -15,6 +17,7 @@
         class="form-control"
         required
       ></textarea>
+      <div class="invalid-feedback">Please enter a short description</div>
       </div>
       
       <div class="mb-3">
@@ -30,11 +33,13 @@
           <div class="mb-3 col-md-4">
             <label for="price" class="form-label">Price</label> 
             <input name="listing[price]" placeholder="1200" type="number"  class="form-control" required />
+            <div class="invalid-feedback">Price should be valid</div>
           </div>
           
           <div class="mb-3 col-md-8">
             <label for="country" class="form-label">Country</label>
             <input name="listing[country]" placeholder="India" type="text" class="form-control" required />
+            <div class="invalid-feedback">Country name should be valid </div>
           </div>
         
         </div>
@@ -45,8 +50,9 @@
           placeholder="Kisan Nagar,Thane,Maharashtra"
           type="text"
           class="form-control"
-          required
-        /></div>
+          required />
+          <div class="invalid-feedback">Location should be valid</div>
+        </div>
       
       <button class="btn btn-dark add-btn mt-3">Add</button>
       <br><br>
