Updated edit listing form with some validation

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -4,27 +4,32 @@
 
 <h3>Edit your Listing</h3>
 
-<form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+<form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
 
   <div class="mb-3">
     <label for="title" class="form-label">Title</label>
-    <input name="listing[title]" value="<%= listing.title %>" type="text"  class="form-control"/>
+    <input name="listing[title]" value="<%= listing.title %>" type="text"  class="form-control" required/>
+    <div class="valid-feedback">Title looks good</div>
+    <div class="invalid-feedback">Provide a suitable title</div>
   </div>
       
   <div class="mb-3">
     <label for="description" class="form-label">Description</label>
-    <textarea name="listing[description] " class="form-control"><%= listing.description %></textarea>
+    <textarea name="listing[description] " class="form-control" required><%= listing.description %></textarea>
+    <div class="invalid-feedback">Please add a short description</div>
   </div>
       
   <div class="mb-3">
     <label for="image" class="form-label">Image Link</label>
-    <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control" />
+    <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control" required />
+    <div class="invalid-feedback">Please enter a valid link for image</div>
   </div>
    
   <div class="row">
     <div class="mb-3 col-md-4">
       <label for="price" class="form-label">Price</label>
-      <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control" />
+      <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control" required/>
+      <div class="invalid-feedback">Provide a suitable price</div>
     </div>
         
     <div class="mb-3 col-md-8">
@@ -33,18 +38,20 @@
       name="listing[country]"
       value="<%= listing.country %>"
       type="text" class="form-control"
-    /></div>
+      required/>
+      <div class="invalid-feedback">Provide the country name</div>
+  </div>
   </div>
 
-  
-      
   <div class="mb-3">
     <label for="location" class="form-label">Location</label>
     <input
     name="listing[location]"
     value="<%= listing.location %>"
     type="text" class="form-control"
-  /></div>
+    required/>
+    <div class="invalid-feedback">Provide the exact location</div>
+  </div>
       
   <button class="btn btn-dark edit-btn mt-3">Edit</button>
 <br><br>
