--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,8 +1,8 @@
 <% layout("/layouts/boilerplate")%> 
 <div class="row mt-3">
   <div class="col-8 offset-4">
-    <h3>Listing Details :</h3>
-    <div class="card col-7">
+    <h3>Listing Details</h3>
+    <div class="card col-8">
       <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image67890">
       <div class="card-body">
         <p class="card-text">
