--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,12 +1,11 @@
 <% layout("/layouts/boilerplate")%> 
 <div class="row mt-3">
   <div class="col-8 offset-4">
-    <h3>Listing Details</h3>
+    <h3><%= listing.title %></h3>
     <div class="card col-8">
       <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image67890">
       <div class="card-body">
         <p class="card-text">
-          <b><%= listing.title %></b><br>
           <%= listing.description %> <br>
           &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
           <%= listing.location %> <br>
@@ -19,5 +18,22 @@
     <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
       <button class="btn btn-danger">Delete this listing</button> <br><br>
     </form>
+</div>
+
+<div class="col-8 offset-4 mb-3">
+  <hr>
+
+  <h4>Leave a Review </h4>
+  <form action="/listings/<%= listing.id %>/reviews" method="POST">
+    <div class="mb-3 mt-3">
+      <label for="rating" class="form-label">Rating</label>
+      <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+    </div>
+    <div class="mb-3 mt-3">
+      <label for="comment" class="form-label">Comments</label>
+      <textarea name="review[comment]" cols="30" rows="5" id="comment" class="form-control"></textarea>
+    </div>
+    <button class="btn btn-outline-dark">Submit</button>
+  </form>
 </div>
 </div>
