--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -24,14 +24,15 @@
   <hr>
 
   <h4>Leave a Review </h4>
-  <form action="/listings/<%= listing.id %>/reviews" method="POST">
+  <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
     <div class="mb-3 mt-3">
       <label for="rating" class="form-label">Rating</label>
       <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
     </div>
     <div class="mb-3 mt-3">
       <label for="comment" class="form-label">Comments</label>
-      <textarea name="review[comment]" cols="30" rows="5" id="comment" class="form-control"></textarea>
+      <textarea name="review[comment]" cols="30" rows="5" id="comment" class="form-control" required></textarea>
+      <div class="invalid-feedback">Please add reviews to submit</div>
     </div>
     <button class="btn btn-outline-dark">Submit</button>
   </form>
