--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,12 +5,11 @@
     <div class="card col-8 listing-card">
       <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image67890">
       <div class="card-body">
-        <p class="card-text">
-          <%= listing.description %> <br>
-          &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
-          <%= listing.location %> <br>
-          <%= listing.country %>
-        </p>
+        <p class="card-text"> <b> Owned by : <i><%= listing.owner.username %></i></b> </p>
+        <p class="card-text"><%= listing.description %> </p>
+        <p class="card-text"> &#8377; <%= listing.price.toLocaleString("en-IN") %> </p>
+        <p class="card-text"><%= listing.location %> </p>
+        <p class="card-text"><%= listing.country %></p>
       </div>
     </div>
     <a href="/listings/<%= listing._id %>/edit" class="btn edit-btn">Edit this Listing</a>
