--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -22,9 +22,10 @@
     <% } %>
 </div>
 
+
 <div class="col-8 offset-4 mb-3">
   <hr>
-
+  <% if(currUser) { %>
   <h4>Leave a Review </h4>
   <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
     <div class="mb-3 mt-3">
@@ -39,14 +40,14 @@
     <button class="btn btn-outline-dark">Submit</button>
   </form>
   <hr>
-
+  <% } %>
 
   <p><b>All Reviews</b></p>
 <div class="row">
   <% for(review of listing.reviews) { %>
   <div class="card col-5 mb-3 ms-3">
     <div class="card-body">
-    <h5 class="card-title">User Name</h5>
+    <h5 class="card-title">@<%= review.author.username %></h5>
     <p class="card-text"><%= review.comment %></p>
     <p class="card-text"><%= review.rating %> Stars</p>
     </div>
