--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -4,7 +4,7 @@
 
 <h3>Edit your Listing</h3>
 
-<form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+<form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
 
   <div class="mb-3">
     <label for="title" class="form-label">Title</label>
@@ -15,14 +15,13 @@
       
   <div class="mb-3">
     <label for="description" class="form-label">Description</label>
-    <textarea name="listing[description] " class="form-control" required><%= listing.description %></textarea>
+    <textarea name="listing[description]" class="form-control" required><%= listing.description %></textarea>
     <div class="invalid-feedback">Please add a short description</div>
   </div>
       
   <div class="mb-3">
-    <label for="image" class="form-label">Image Link</label>
-    <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control" required />
-    <div class="invalid-feedback">Please enter a valid link for image</div>
+    <label for="image" class="form-label"> Upload New Image </label>
+    <input name="listing[image]"  type="file" class="form-control"  />
   </div>
   
   <div class="row">
