--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -2,16 +2,13 @@
 <body>
   
   <h3>All Listings</h3>
-  <!-- <form method="GET" action="/listings/new">
-    <button>Create New Listing</button>
-  </form> -->
 
   <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 ">
     <% for(let listing of allListings) { %>
       <a href="/listings/<%= listing._id %>" class="listing-link">
 
         <div class="card col listing-card">
-          <img src="<%= listing.image %>" class="card-img-top" alt="Listings" style="height :20rem">
+          <img src="<%= listing.image.url %>" class="card-img-top" alt="Listings" style="height :20rem ">
           <div class="card-img-overlay"></div>
           <div class="card-body">
             <p class="card-text">
@@ -26,11 +23,4 @@
       </div> 
       </a>
       
-<!--     
-
-    <ul>
-      <% for(let listing of allListings) { %>
-      <li><a href="/listings/<%= listing._id %>"> <%= listing.title %> </a></li>
-      <% } %>
-    </ul> -->
   </body>
