--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,9 +1,9 @@
 <% layout("/layouts/boilerplate")%> 
 <div class="row mt-3">
-  <div class="col-8 offset-4">
+  <div class="col-10 offset-2">
     <h3><%= listing.title %></h3>
-    <div class="card col-8 listing-card">
-      <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image67890">
+    <div class="card col-10 listing-card">
+      <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image67890">
       <div class="card-body">
         <p class="card-text"> <b> Owned by : <i><%= listing.owner.username %></i></b> </p>
         <p class="card-text"><%= listing.description %> </p>
@@ -23,7 +23,7 @@
 </div>
 
 
-<div class="col-8 offset-4 mb-3">
+<div class="col-8 offset-2 mb-3">
   <hr>
   <% if(currUser) { %>
   <h4>Leave a Review </h4>
@@ -65,7 +65,7 @@
     <p class="starability-result card-text" data-rating="<%= review.rating %>" ></p>
     <p class="card-text"><%= review.comment %></p>
     </div>
-    <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mb-3" method="POST">
+    <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mb-3" method="POST"><br>
       <button class="btn btn-sm btn-dark">Delete</button>
     </form>
   </div>
