--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,6 +1,12 @@
 <% layout("/layouts/boilerplate")%> 
+<script>
+  const mapToken = "<%= process.env.MAP_TOKEN %>";
+  const listing = <%-JSON.stringify(listing) %>;
+
+</script>
+
 <div class="row mt-3">
-  <div class="col-10 offset-2">
+  <div class="col-8 offset-2">
     <h3><%= listing.title %></h3>
     <div class="card col-10 listing-card">
       <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image67890">
@@ -24,8 +30,8 @@
 
 
 <div class="col-8 offset-2 mb-3">
-  <hr>
   <% if(currUser) { %>
+    <hr>
   <h4>Leave a Review </h4>
   <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
 
@@ -56,8 +62,9 @@
   <hr>
   <% } %>
 
-  <p><b>All Reviews</b></p>
+<% if(listing.reviews.length >0) { %>
 <div class="row">
+  <p><b>All Reviews</b></p>
   <% for(review of listing.reviews) { %>
   <div class="card col-5 mb-3 ms-3">
     <div class="card-body">
@@ -71,5 +78,26 @@
   </div>
   <% } %>
 </div>
-  </div>
+<% } %>
 </div>
+  <div class="col-6 offset-2 mb-3">
+    <h3>Where you'll be</h3>
+    <div id="map" ></div>
+    <div id="menu" class="mb-3 mt-2 offset-2">
+      <input id="satellite-streets-v12" type="radio" name="rtoggle" value="satellite" >
+      <label for="satellite-streets-v12">satellite streets</label>
+      <input id="light-v11" type="radio" name="rtoggle" value="light">
+      <label for="light-v11">light</label>
+      <input id="dark-v11" type="radio" name="rtoggle" value="dark">
+      <label for="dark-v11">dark</label>
+      <input id="streets-v12" type="radio" name="rtoggle" value="streets" checked="checked">
+      <label for="streets-v12">streets</label>
+      <input id="outdoors-v12" type="radio" name="rtoggle" value="outdoors">
+      <label for="outdoors-v12">outdoors</label>
+  </div>
+  </div>
+  
+</div>
+
+
+<script src="/js/map.js"></script>
