--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,23 +1,23 @@
 <nav class="navbar navbar-expand-md bg-body-tertiary border-bottom sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><i class="fa-solid fa-location-arrow"></i></a>
+      <a class="navbar-brand" href="/listings"><i class="fa-solid fa-location-arrow"></i></a>
       <button class="navbar-toggler" type="button" 
       data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link"  href="/">Home</a>
-          <a class="nav-link" href="/listings">All Listings</a>
-          <a class="nav-link" href="/listings/new">Add new Listing</a>
+          <a class="nav-link" href="/listings">Explore</a>
+
         </div>
         <div class="navbar-nav ms-auto ">
+          <a class="nav-link" href="/listings/new">Rent Your Home</a>
           <% if(!currUser) {%>
-          <a class="nav-link"  href="/signup">Sign Up</a>
-          <a class="nav-link" href="/login">Log In</a>
+          <b><a class="nav-link "  href="/signup">Sign Up</a></b>
+          <b><a class="nav-link" href="/login">Log In</a></b>
           <% } %> 
           <% if(currUser) { %>
-          <a class="nav-link" href="/logout">Log Out</a>
+          <b><a class="nav-link" href="/logout">Log Out</a></b>
           <% } %>
         </div>
       </div>
