--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,12 +5,19 @@
    min-height: 100vh;
 }
 
-.container{
-   flex :1;
-   display: flex;
-   flex-direction: column;
-   min-height: 100vh;
+.content {
+   flex: 1; 
+   margin-left: 3rem;
+   margin-right: 3rem;;/* Ensures content area grows to fill space */
 }
+
+.container {
+   max-width: 1140px; /* Bootstrap default */
+   margin-left: auto;
+   margin-right: auto;
+   width: 100%;
+}
+
  /* Navbar */
 .navbar{
    height:5rem;
@@ -27,6 +34,17 @@
 }
 
  /* Footer */
+
+footer {
+   width: 100%;  /* Ensure the footer takes full width */
+   background-color: #f8f9fa;  /* Add your preferred background color */
+   padding: 1rem;
+   text-align: center;
+   position: relative;
+   bottom: 0;
+}
+
+
 .f-info-links a {
    text-decoration: none;
    color: #222222;
@@ -111,3 +129,4 @@
    padding: 10px;
    font-family: 'Open Sans', sans-serif;
 }
+
