--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,3 +1,27 @@
+<style>
+  .btn-search{
+  background-color: aquamarine;
+  color: black;
+  border-radius: 25px;
+  padding: 0 1rem 0 1rem;
+}
+
+.btn-search:hover{
+  background-color: aquamarine;
+  color: black;
+}
+.btn-search i{
+  display: inline;
+  margin-right: 0.5rem;
+}
+
+.search-input{
+  border-radius: 25px;
+  padding: 0.5rem 5rem 0.5rem 2rem;
+
+}
+</style>
+
 <nav class="navbar navbar-expand-md bg-body-tertiary border-bottom sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="/listings"><i class="fa-solid fa-location-arrow"></i></a>
@@ -8,7 +32,13 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="/listings">Explore</a>
-
+        </div>
+        <div class="navbar-nav ms-auto">
+          <form class="d-flex">
+            <input class="form-control me-2 search-input" type="search" placeholder="Search Home">
+            <button class="btn btn-search" type="submit">
+              <i class="fa-solid fa-magnifying-glass"></i>Search</button>
+          </form>
         </div>
         <div class="navbar-nav ms-auto ">
           <a class="nav-link" href="/listings/new">Rent Your Home</a>
