--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -19,15 +19,17 @@
 <link href="https://api.mapbox.com/mapbox-gl-js/v3.6.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.6.0/mapbox-gl.js"></script>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <%- include("../includes/navbar.ejs")%>
-    <div class="container">
+    <div class="content flex-grow-1 ">
         <%- include("../includes/flash.ejs")%>
         <%- body %>
     </div>
+    <footer class="mt-auto w-100">
 
-    <%- include("../includes/footer.ejs")%>
-
+            <%- include("../includes/footer.ejs")%>
+    
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous">
