--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -19,7 +19,6 @@
   }
 </style>
 
-<body>
   
   <div id="filters">
     <div class="filter">
@@ -84,24 +83,21 @@
     </div>
   </div>
 
-  <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3 fix">
+  <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3 ">
     <% for(let listing of allListings) { %>
       <a href="/listings/<%= listing._id %>" class="listing-link">
-
-        <div class="card col listing-card">
-          <img src="<%= listing.image.url %>" class="card-img-top" alt="Listings" style="height :20rem ">
+        <div class="card col listing-card ">
+          <img src="<%= listing.image.url %>" class="card-img-top" alt="Listings" style="height :20rem " />
           <div class="card-img-overlay"></div>
           <div class="card-body">
             <p class="card-text">
               <b><%= listing.title %></b> <br>
               &#8377; <%= listing.price.toLocaleString("en-IN") %>  /night
-            
             </p>
           </div>
         </div>
-        <% } %>
-  
-      </div> 
       </a>
+    <% } %>
+  </div> 
       
-  </body>
+  
