--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,7 +6,7 @@
 </script>
 
 <div class="row mt-3">
-  <div class="col-8 offset-2">
+  <div class="col-7 offset-3">
     <h3><%= listing.title %></h3>
     <div class="card col-10 listing-card">
       <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image67890">
@@ -29,7 +29,7 @@
 </div>
 
 
-<div class="col-8 offset-2 mb-3">
+<div class="col-7 offset-3 mb-3">
   <% if(currUser) { %>
     <hr>
   <h4>Leave a Review </h4>
@@ -80,22 +80,22 @@
 </div>
 <% } %>
 </div>
-  <div class="col-6 offset-2 mb-3">
+  <div class="col-7 offset-3 mb-3">
     <h3>Where you'll be</h3>
     <div id="map" ></div>
-    <div id="menu" class="mb-3 mt-2 offset-2">
-      <input id="satellite-streets-v12" type="radio" name="rtoggle" value="satellite" >
-      <label for="satellite-streets-v12">satellite streets</label>
-      <input id="light-v11" type="radio" name="rtoggle" value="light">
-      <label for="light-v11">light</label>
-      <input id="dark-v11" type="radio" name="rtoggle" value="dark">
-      <label for="dark-v11">dark</label>
-      <input id="streets-v12" type="radio" name="rtoggle" value="streets" checked="checked">
-      <label for="streets-v12">streets</label>
-      <input id="outdoors-v12" type="radio" name="rtoggle" value="outdoors">
-      <label for="outdoors-v12">outdoors</label>
   </div>
-  </div>
+  <div id="menu" class="mb-3 mt-2 offset-3 col-5">
+    <input id="satellite-streets-v12" type="radio" name="rtoggle" value="satellite" >
+    <label for="satellite-streets-v12">satellite streets</label>
+    <input id="light-v11" type="radio" name="rtoggle" value="light">
+    <label for="light-v11">light</label>
+    <input id="dark-v11" type="radio" name="rtoggle" value="dark">
+    <label for="dark-v11">dark</label>
+    <input id="streets-v12" type="radio" name="rtoggle" value="streets" checked="checked">
+    <label for="streets-v12">streets</label>
+    <input id="outdoors-v12" type="radio" name="rtoggle" value="outdoors">
+    <label for="outdoors-v12">outdoors</label>
+</div>
   
 </div>
 
